modify to config in paper

--- a/config/pcl-vit.yml
+++ b/config/pcl-vit.yml
@@ -15,19 +15,19 @@ INPUT:
   PADDING: 10
   PIXEL_MEAN: [0.5, 0.5, 0.5]
   PIXEL_STD: [0.5, 0.5, 0.5]
-
+ 
 DATALOADER:
-  NUM_INSTANCE: 4
+  NUM_INSTANCE: 8
   NUM_WORKERS: 8
 
 SOLVER:
-  IMS_PER_BATCH: 64
-  OPTIMIZER_NAME: "Adam"
-  BASE_LR: 0.000005
+  IMS_PER_BATCH: 256
+  OPTIMIZER_NAME: "SGD"
+  BASE_LR: 3.5e-4
   WARMUP_METHOD: 'linear'
   WARMUP_ITERS: 10
   WARMUP_FACTOR: 0.1
-  WEIGHT_DECAY:  0.0001
+  WEIGHT_DECAY: 5.0e-4
   MAX_EPOCHS: 60
   CHECKPOINT_PERIOD: 60
   LOG_PERIOD: 50
